Refactor layout and break the grid for code snippets

--- a/content/blog/create-a-discord-bot-under-15-minutes/index.mdx
+++ b/content/blog/create-a-discord-bot-under-15-minutes/index.mdx
@@ -29,7 +29,7 @@ Easy peasy!
 
 All right, no more talking. First, you will need to create a folder and initialize it:
 
-```shell:title=package.json
+```shell
 mkdir my-bot
 cd my-bot
 npm init -y # generates you a minimal package.json file
