--- a/content/blog/save-time-github-cli/index.mdx
+++ b/content/blog/save-time-github-cli/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: How to Save Time With GitHub CLI
-description: Managing a repository takes time. Creating pull requests, finding issues, reviewing code. Hopefully, GitHub released their official CLI. Learn in this post how to leverage its power.
+description: Managing a repository takes time. Creating pull requests, finding issues, reviewing code. Lucky you! GitHub released their official CLI. Learn in this post how to leverage its power.
 date: "2020-10-03"
 cover: "./cover.jpg"
 tags: [tools]
@@ -14,7 +14,7 @@ Triaging issues, creating or checking out pull requests, releasing packages, for
 
 First things first, installing GitHub CLI. If you're a macOS user, run `brew install gh`. If you're a Windows user, you can install it via [scoop](https://vuejs.org/) or [Chocolatey](https://chocolatey.org/). As for Linux, you have great installation instructions here: [Installing gh on Linux](https://github.com/cli/cli/blob/trunk/docs/install_linux.md).
 
-It's installed? Good. As said previously, GitHub CLI aims at managing your workflow directly from the terminal. But it needs to have access to your account for that:
+It's installed? Good. As said previously, GitHub CLI aims at managing your workflow directly from the terminal. But it needs to have access to your account,
 
 ```sh
 gh auth login
