--- a/content/blog/fight-zoom-fatigue/index.mdx
+++ b/content/blog/fight-zoom-fatigue/index.mdx
@@ -3,7 +3,7 @@ title: 4 Tips to Fight the Zoom Fatigue
 description: Remote work is more and more part of our everyday lives. And that means more Zoom meetings, which can be exhausting. Find out how you can fight that fatigue by reading this post.
 date: "2020-05-11"
 cover: "./cover.jpg"
-coverCredit: Photo by Dylan Gillis on Unsplash
+coverCredit: Photo by Anna Shvets on Pexels
 tags: [career]
 ---
 
