--- a/content/blog/how-to-build-reusable-and-accessible-switch-vue/index.mdx
+++ b/content/blog/how-to-build-reusable-and-accessible-switch-vue/index.mdx
@@ -3,6 +3,7 @@ title: How to Build an Accessible Toggle Switch with Vue 3
 description: Building custom components such as a Toggle Switch is no easy task. Learn how you can build a reusable, accessible and responsive toggle switch with Vue 3.
 date: "2020-08-24"
 cover: "./cover.jpg"
+coverCredit: Photo by Rodolfo Clix on Pexels
 tags: [vue]
 ---
 
