--- a/content/blog/save-time-github-cli/index.mdx
+++ b/content/blog/save-time-github-cli/index.mdx
@@ -1,7 +1,6 @@
 ---
 title: How the Github CLI Saves Me Time Every Day
-seoTitle: How
-description: Managing a repository takes time. Creating pull requests, finding issues, reviewing code. Lucky you! GitHub released their official CLI. Learn in this post how to leverage its power.
+description: Managing a repository takes time. Creating pull requests, finding issues, reviewing code and more. Thankfully, GitHub released their official CLI. Let's leverage its power.
 date: "2020-10-03"
 cover: "./cover.jpg"
 tags: [tools]
